--- a/lesson06/assignment/css/_components.content.scss
+++ b/lesson06/assignment/css/_components.content.scss
@@ -8,6 +8,18 @@ html {
     box-sizing: inherit;
 }
 
+body {
+  background-color: $near-black;
+}
+
+.main-home {
+  display: grid;
+  grid-template-columns: 15% 70% 15%;
+}
+
 .main {
-    padding: 2rem;
+  display: grid;
+  grid-template-columns: 25% 1fr;
+  color: $cream;
+  font-family: $main-font;
 }
